Cleaned up scripts in html file and squashed bugs

--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,8 @@ nav {
 nav:hover {
   -webkit-backdrop-filter: blur(40px);
   backdrop-filter: blur(40px);
-  background-color: rgba(240, 248, 255, 0.054);
+
+  /* background-color: rgba(240, 248, 255, 0.054); */
 }
 nav a {
   transition: all 300ms ease-in-out;
@@ -68,6 +69,16 @@ nav a:hover {
   cursor: pointer;
   text-decoration: underline;
   text-underline-offset: 5px;
+}
+@supports (scrollbar-color: red blue) {
+  .content {
+    scrollbar-color: white black;
+    scrollbar-width: thin;
+  }
+  * {
+    scrollbar-color: white transparent;
+    scrollbar-width: thin;
+  }
 }
 
 ::-webkit-scrollbar {
@@ -83,20 +94,16 @@ nav a:hover {
 ::-webkit-scrollbar-thumb:hover {
   background: rgba(255, 255, 255, 0.5);
 }
-@supports (scrollbar-color: red blue) {
-  * {
-    scrollbar-color: white transparent;
-    scrollbar-width: thin;
-  }
-}
+
 .content {
   overflow-y: scroll;
-  width: 100%;
+  width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 40vh;
+  gap: min(40vh, 40vw);
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 .home {
   padding-top: 30vh;
@@ -124,7 +131,8 @@ nav a:hover {
   justify-content: center;
   width: 100%;
   text-align: center;
-  font-size: max(10vw, 5vh);
+  font-weight: 400;
+  font-size: max(10vw, 4.8vh);
 }
 
 .skills h2,
@@ -224,7 +232,7 @@ h2 {
 .social {
   color: white;
   background-color: black;
-  width: 100%;
+  width: 100vw;
   height: 70vh;
   padding-bottom: 10vh;
   display: flex;
@@ -310,5 +318,8 @@ h2 {
     left: 0px;
     width: 100vw;
     height: 100vh;
+  }
+  .social h2 {
+    font-size: 2rem;
   }
 }
